aggiunta umidità e accesso a dati esterni di temp e umid
